@@ -24,7 +24,6 @@ import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.backwardRefs.CompilerRef;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLocalInspectionTool {
   private static final Logger LOG = Logger.getInstance(FrequentlyUsedInheritorInspection.class);
@@ -96,7 +95,7 @@ public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLoc
       return isInSourceContent(aClass) ? Pair.create(superClass, aClass.getExtendsList()) : null;
     }
 
-    PsiClass anInterface = StreamEx.of(aClass.getInterfaces())
+    PsiClass anInterface = Arrays.stream(aClass.getInterfaces())
       .filter(c -> !CommonClassNames.JAVA_LANG_OBJECT.equals(c.getQualifiedName()))
       .filter(c -> isInSourceContent(c))
       .collect(MoreCollectors.onlyOne())
@@ -175,7 +174,7 @@ public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLoc
         return null;
       })
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
 
     PsiResolveHelper resolveHelper = PsiResolveHelper.getInstance(project);
     return directInheritorStats
@@ -184,7 +183,7 @@ public final class FrequentlyUsedInheritorInspection extends AbstractBaseJavaLoc
       .flatMap(c -> StreamEx.of(getClassesIfInterface(c, finalHierarchyCardinality, searchScope, place, project, compilerRefService)).prepend(c))
       .sorted()
       .limit(MAX_RESULT)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static List<ClassAndInheritorCount> getClassesIfInterface(@NotNull ClassAndInheritorCount classAndInheritorCount,
