@@ -37,7 +37,8 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.stream.Collectors;
+
+import static com.intellij.openapi.util.Predicates.nonNull;
 
 /**
  * @author Dmitry Batkovich
@@ -75,8 +76,8 @@ public final class OfflineDescriptorResolveResult {
   static OfflineDescriptorResolveResult resolve(@NotNull OfflineProblemDescriptor descriptor,
                                                 @NotNull InspectionToolWrapper<?,?> wrapper,
                                                 @NotNull InspectionToolPresentation presentation) {
-    final RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
-    final CommonProblemDescriptor resolvedDescriptor =
+    RefEntity element = descriptor.getRefElement(presentation.getContext().getRefManager());
+    CommonProblemDescriptor resolvedDescriptor =
       ReadAction.compute(() -> createDescriptor(element, descriptor, wrapper, presentation));
     return new OfflineDescriptorResolveResult(element, resolvedDescriptor);
   }
@@ -87,21 +88,21 @@ public final class OfflineDescriptorResolveResult {
                                                           @NotNull OfflineProblemDescriptor offlineDescriptor,
                                                           @NotNull InspectionToolWrapper<?,?> toolWrapper,
                                                           @NotNull InspectionToolPresentation presentation) {
+    Project project = presentation.getContext().getProject();
     if (toolWrapper instanceof GlobalInspectionToolWrapper) {
-      final LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
+      LocalInspectionToolWrapper localTool = ((GlobalInspectionToolWrapper)toolWrapper).getSharedLocalInspectionToolWrapper();
       if (localTool != null) {
-        final CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
+        CommonProblemDescriptor descriptor = createDescriptor(element, offlineDescriptor, localTool, presentation);
         if (descriptor != null) {
           return descriptor;
         }
       }
-      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor);
+      return createRerunGlobalToolDescriptor((GlobalInspectionToolWrapper)toolWrapper, element, offlineDescriptor, project);
     }
-    Project project = presentation.getContext().getProject();
-    if (Registry.is("offline.inspections.results.verify") && 
+    if (Registry.is("offline.inspections.results.verify") &&
         toolWrapper instanceof LocalInspectionToolWrapper && !(toolWrapper.getTool() instanceof UnfairLocalInspectionTool)) {
       if (element instanceof RefElement) {
-        final PsiElement psiElement = ((RefElement)element).getPsiElement();
+        PsiElement psiElement = ((RefElement)element).getPsiElement();
         if (psiElement != null) {
           ProblemDescriptor descriptor = ProgressManager.getInstance().runProcess(
             () -> runLocalTool(psiElement,
@@ -119,7 +120,7 @@ public final class OfflineDescriptorResolveResult {
                                                                                       offlineDescriptor,
                                                                                       QuickFix.EMPTY_ARRAY,
                                                                                       project);
-    final QuickFix[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
+    QuickFix<?>[] quickFixes = getFixes(descriptor, element, presentation, offlineDescriptor.getHints());
     if (quickFixes != null) {
       descriptor = createProblemDescriptorFromOfflineDescriptor(element,
                                                                 offlineDescriptor,
@@ -132,9 +133,9 @@ public final class OfflineDescriptorResolveResult {
   @NotNull
   private static CommonProblemDescriptor createProblemDescriptorFromOfflineDescriptor(@Nullable RefEntity element,
                                                                                       @NotNull OfflineProblemDescriptor offlineDescriptor,
-                                                                                      QuickFix @NotNull [] fixes,
+                                                                                      QuickFix<?> @NotNull [] fixes,
                                                                                       @NotNull Project project) {
-    final InspectionManager inspectionManager = InspectionManager.getInstance(project);
+    InspectionManager inspectionManager = InspectionManager.getInstance(project);
     if (element instanceof RefElement) {
       RefElement refElement = (RefElement)element;
       if(refElement.getPsiElement() instanceof PsiFile) {
@@ -174,7 +175,7 @@ public final class OfflineDescriptorResolveResult {
                                                 @NotNull LocalInspectionToolWrapper toolWrapper,
                                                 @NotNull GlobalInspectionContextImpl context) {
     PsiFile containingFile = psiElement.getContainingFile();
-    final LocalInspectionTool localTool = toolWrapper.getTool();
+    LocalInspectionTool localTool = toolWrapper.getTool();
     TextRange textRange = psiElement.getTextRange();
     LOG.assertTrue(textRange != null,
                    "text range must be not null here; " +
@@ -206,11 +207,11 @@ public final class OfflineDescriptorResolveResult {
       list.addAll(ContainerUtil.flatten(injectedMap.values()));
     }
 
-    final int idx = offlineProblemDescriptor.getProblemIndex();
+    int idx = offlineProblemDescriptor.getProblemIndex();
     int curIdx = 0;
     for (ProblemDescriptor descriptor : list) {
-      final PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
-      final PsiElement element = psiElement instanceof LightElement ? psiElement.getNavigationElement() : psiElement;
+      PsiNamedElement member = BatchModeDescriptorsUtil.getContainerElement(descriptor.getPsiElement(), localTool, context);
+      PsiElement element = psiElement instanceof LightElement ? psiElement.getNavigationElement() : psiElement;
       if (psiElement instanceof PsiFile || element.equals(member)) {
         if (curIdx == idx) {
           return descriptor;
@@ -222,11 +223,11 @@ public final class OfflineDescriptorResolveResult {
     return null;
   }
 
-  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, final int startOffset, final int endOffset) {
-    final FileViewProvider viewProvider = file.getViewProvider();
-    final Set<PsiElement> result = new LinkedHashSet<>();
+  private static PsiElement @NotNull [] getElementsIntersectingRange(PsiFile file, int startOffset, int endOffset) {
+    FileViewProvider viewProvider = file.getViewProvider();
+    Set<PsiElement> result = new LinkedHashSet<>();
     for (Language language : viewProvider.getLanguages()) {
-      final PsiFile psiRoot = viewProvider.getPsi(language);
+      PsiFile psiRoot = viewProvider.getPsi(language);
       if (HighlightingLevelManager.getInstance(file.getProject()).shouldInspect(psiRoot)) {
         result.addAll(CollectHighlightsUtil.getElementsInRange(psiRoot, startOffset, endOffset, true));
       }
@@ -234,10 +235,10 @@ public final class OfflineDescriptorResolveResult {
     return PsiUtilCore.toPsiElementArray(result);
   }
 
-  private static QuickFix @Nullable [] getFixes(@NotNull CommonProblemDescriptor descriptor,
+  private static QuickFix<?> @Nullable [] getFixes(@NotNull CommonProblemDescriptor descriptor,
                                                 RefEntity entity,
                                                 InspectionToolPresentation presentation, List<String> hints) {
-    final List<QuickFix> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
+    List<QuickFix<?>> fixes = new ArrayList<>(hints == null ? 1 : hints.size());
     if (hints == null) {
       addFix(descriptor, entity, fixes, null, presentation);
     }
@@ -249,16 +250,15 @@ public final class OfflineDescriptorResolveResult {
     return fixes.isEmpty() ? null : fixes.toArray(QuickFix.EMPTY_ARRAY);
   }
 
-  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<? super QuickFix> fixes, String hint, InspectionToolPresentation presentation) {
+  private static void addFix(@NotNull CommonProblemDescriptor descriptor, RefEntity entity, List<QuickFix<?>> fixes, String hint, @NotNull InspectionToolPresentation presentation) {
     ContainerUtil.addAllNotNull(fixes, presentation.findQuickFixes(descriptor, entity, hint));
   }
 
   private static CommonProblemDescriptor createRerunGlobalToolDescriptor(@NotNull GlobalInspectionToolWrapper wrapper,
                                                                          @Nullable RefEntity entity,
-                                                                         OfflineProblemDescriptor offlineDescriptor) {
-
-
-    QuickFix rerunFix = new QuickFix() {
+                                                                         @NotNull OfflineProblemDescriptor offlineDescriptor,
+                                                                         @NotNull Project project) {
+    QuickFix<?> rerunFix = new QuickFix<>() {
       @Nls
       @NotNull
       @Override
@@ -286,21 +286,20 @@ public final class OfflineDescriptorResolveResult {
     };
     List<String> hints = offlineDescriptor.getHints();
     if (hints != null && entity instanceof RefModule) {
-      List<QuickFix> fixes =
-        hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(f -> f != null).collect(Collectors.toList());
-      return new ModuleProblemDescriptorImpl(ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix), offlineDescriptor.getDescription(), ((RefModule)entity).getModule());
+      List<QuickFix> fixes = hints.stream().map(hint -> wrapper.getTool().getQuickFix(hint)).filter(nonNull()).toList();
+      return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), ((RefModule)entity).getModule(), ArrayUtil.append(fixes.toArray(QuickFix.EMPTY_ARRAY), rerunFix));
     }
-    return new CommonProblemDescriptorImpl(new QuickFix[]{rerunFix}, offlineDescriptor.getDescription());
+    return InspectionManager.getInstance(project).createProblemDescriptor(offlineDescriptor.getDescription(), rerunFix);
   }
 
   private static final class ProblemDescriptorBackedByRefElement implements ProblemDescriptor {
     private final RefElement myElement;
     private final OfflineProblemDescriptor myOfflineProblemDescriptor;
-    private final QuickFix[] myFixes;
+    private final QuickFix<?>[] myFixes;
 
     private ProblemDescriptorBackedByRefElement(RefElement element,
                                                 OfflineProblemDescriptor descriptor,
-                                                QuickFix[] fixes) {
+                                                QuickFix<?>[] fixes) {
       myElement = element;
       myOfflineProblemDescriptor = descriptor;
       myFixes = fixes;
@@ -370,7 +369,7 @@ public final class OfflineDescriptorResolveResult {
     }
 
     @Override
-    public QuickFix @Nullable [] getFixes() {
+    public QuickFix<?> @Nullable [] getFixes() {
       return myFixes;
     }
   }
