@@ -1,13 +1,12 @@
 // Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.fileEditor.impl;
 
+import com.intellij.codeWithMe.ClientId;
 import com.intellij.featureStatistics.fusCollectors.FileEditorCollector;
 import com.intellij.ide.IdeBundle;
+import com.intellij.ide.impl.DataValidators;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.actionSystem.CommonDataKeys;
-import com.intellij.openapi.actionSystem.DataProvider;
-import com.intellij.openapi.actionSystem.IdeActions;
-import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.diagnostic.Logger;
@@ -40,6 +39,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
+import javax.swing.border.Border;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 import java.awt.*;
@@ -55,13 +55,15 @@ import java.util.function.Supplier;
  * It's a composite what can be pinned in the tabs list or opened as a preview, not concrete file editors.
  * It also manages the internal UI structure: bottom and top components, panels, labels, actions for navigating between editors it owns.
  */
-public class EditorComposite extends UserDataHolderBase implements Disposable {
+public class EditorComposite extends FileEditorComposite implements Disposable {
   private static final Logger LOG = Logger.getInstance(EditorComposite.class);
 
   /**
    * File for which composite is created
    */
   private final @NotNull VirtualFile myFile;
+
+  private final @NotNull ClientId myClientId;
 
   private final @NotNull Project myProject;
   /**
@@ -72,11 +74,6 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
    * Whether the composite is opened as preview tab or not
    */
   private boolean myPreview;
-  /**
-   * This is initial timestamp of the file. It uses to implement
-   * "close non modified editors first" feature.
-   */
-  private final long myInitialFileTimeStamp;
   private TabbedPaneWrapper myTabbedPaneWrapper;
   private final @NotNull MyComponent myComponent;
   private final FocusWatcher myFocusWatcher;
@@ -96,17 +93,23 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
 
   private final EventDispatcher<EditorCompositeListener> myDispatcher = EventDispatcher.create(EditorCompositeListener.class);
 
+  private boolean mySelfBorder;
+
   EditorComposite(final @NotNull VirtualFile file,
                   @NotNull List<@NotNull FileEditorWithProvider> editorsWithProviders,
                   final @NotNull FileEditorManagerEx fileEditorManager) {
     ApplicationManager.getApplication().assertIsDispatchThread();
     myFile = file;
+    myClientId = ClientId.getCurrent();
     myEditorsWithProviders.addAll(editorsWithProviders);
     for (FileEditorWithProvider editorWithProvider : myEditorsWithProviders) {
-      FileEditor.FILE_KEY.set(editorWithProvider.getFileEditor(), myFile);
+      FileEditor editor = editorWithProvider.getFileEditor();
+      FileEditor.FILE_KEY.set(editor, myFile);
+      if (!ClientId.isLocal(myClientId)) {
+        ClientFileEditorManager.assignClientId(editor, myClientId);
+      }
     }
     myFileEditorManager = fileEditorManager;
-    myInitialFileTimeStamp = myFile.getTimeStamp();
 
     myProject = fileEditorManager.getProject();
     Disposer.register(myProject, this);
@@ -172,8 +175,9 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     return getAllProviders().toArray(FileEditorProvider.EMPTY_ARRAY);
   }
 
+  @Override
   public @NotNull List<@NotNull FileEditorProvider> getAllProviders() {
-    return ContainerUtil.map(getAllEditorsWithProviders(), it -> it.getProvider());
+    return ContainerUtil.map(getAllEditorsWithProviders(), FileEditorWithProvider::getProvider);
   }
 
   private @NotNull TabbedPaneWrapper.AsJBTabs createTabbedPaneWrapper(MyComponent myComponent) {
@@ -232,6 +236,7 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     }
   }
 
+  @Override
   public boolean isPreview() {
     return myPreview;
   }
@@ -292,14 +297,6 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
   }
 
   /**
-   * @return initial time stamp of the file (on moment of creation of
-   * the composite)
-   */
-  public long getInitialFileTimeStamp() {
-    return myInitialFileTimeStamp;
-  }
-
-  /**
    * @return editors which are opened in the composite. <b>Do not modify
    * this array</b>.
    * @deprecated use {@link #getAllEditors()}
@@ -309,12 +306,13 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     return getAllEditors().toArray(FileEditor.EMPTY_ARRAY);
   }
 
+  @Override
   public @NotNull List<@NotNull FileEditor> getAllEditors() {
-    return ContainerUtil.map(getAllEditorsWithProviders(), it -> it.getFileEditor());
+    return ContainerUtil.map(getAllEditorsWithProviders(), FileEditorWithProvider::getFileEditor);
   }
 
   public @NotNull List<@NotNull FileEditorWithProvider> getAllEditorsWithProviders() {
-    return Collections.unmodifiableList(new SmartList<>(myEditorsWithProviders));
+    return List.copyOf(myEditorsWithProviders);
   }
 
   @NotNull
@@ -353,6 +351,8 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     final JComponent container = top ? myTopComponents.get(editor) : myBottomComponents.get(editor);
     assert container != null;
 
+    mySelfBorder = false;
+
     if (remove) {
       container.remove(component.getParent());
       EditorCompositeListener multicaster = myDispatcher.getMulticaster();
@@ -366,7 +366,10 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     else {
       NonOpaquePanel wrapper = new NonOpaquePanel(component);
       if (!Boolean.TRUE.equals(component.getClientProperty(FileEditorManager.SEPARATOR_DISABLED))) {
-        wrapper.setBorder(createTopBottomSideBorder(top, ClientProperty.get(component, FileEditorManager.SEPARATOR_COLOR)));
+        Border border = ClientProperty.get(component, FileEditorManager.SEPARATOR_BORDER);
+        mySelfBorder = border != null;
+        wrapper.setBorder(
+          border == null ? createTopBottomSideBorder(top, ClientProperty.get(component, FileEditorManager.SEPARATOR_COLOR)) : border);
       }
       int index = calcComponentInsertionIndex(component, container);
       container.add(wrapper, index);
@@ -379,6 +382,10 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
       }
     }
     container.revalidate();
+  }
+
+  public boolean selfBorder() {
+    return mySelfBorder;
   }
 
   private static int calcComponentInsertionIndex(@NotNull JComponent newComponent, @NotNull JComponent container) {
@@ -467,15 +474,6 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
   }
 
   /**
-   * @deprecated use {@link #getSelectedWithProvider()}
-   */
-  @Deprecated(forRemoval = true)
-  public @NotNull Pair<FileEditor, FileEditorProvider> getSelectedEditorWithProvider() {
-    FileEditorWithProvider info = getSelectedWithProvider();
-    return Pair.create(info.getFileEditor(), info.getProvider());
-  }
-
-  /**
    * @return component which represents set of file editors in the UI
    */
   public @NotNull JComponent getComponent() {
@@ -493,7 +491,7 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
    * @return {@code true} if the composite contains at least one modified myEditor
    */
   public boolean isModified() {
-    return ContainerUtil.exists(getAllEditors(), editor -> editor.isModified());
+    return ContainerUtil.exists(getAllEditors(), FileEditor::isModified);
   }
 
   /**
@@ -552,21 +550,27 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
 
     @Override
     public final Object getData(@NotNull String dataId) {
+      if (CommonDataKeys.PROJECT.is(dataId)) {
+        return myProject;
+      }
       if (PlatformCoreDataKeys.FILE_EDITOR.is(dataId)) {
         return getSelectedEditor();
       }
       if (CommonDataKeys.VIRTUAL_FILE.is(dataId)) {
-        return myFile.isValid() ? myFile : null;
+        return myFile;
       }
       if (CommonDataKeys.VIRTUAL_FILE_ARRAY.is(dataId)) {
-        return myFile.isValid() ? new VirtualFile[]{myFile} : null;
+        return new VirtualFile[]{myFile};
       }
-      if (CommonDataKeys.PROJECT.is(dataId)) {
-        return getProject();
+      if (PlatformDataKeys.LAST_ACTIVE_FILE_EDITOR.is(dataId)) {
+        EditorWindow window = FileEditorManagerEx.getInstanceEx(myProject).getCurrentWindow();
+        EditorComposite composite = window != null ? window.getSelectedComposite(true) : null;
+        return composite != null ? composite.getSelectedEditor() : null;
       }
       JComponent component = getPreferredFocusedComponent();
       if (component instanceof DataProvider && component != this) {
-        return ((DataProvider)component).getData(dataId);
+        Object data = ((DataProvider)component).getData(dataId);
+        return data == null ? null : DataValidators.validOrNull(data, dataId, component);
       }
       return null;
     }
@@ -590,6 +594,9 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     myEditorsWithProviders.add(editorWithProvider);
 
     FileEditor.FILE_KEY.set(editor, myFile);
+    if (!ClientId.isLocal(myClientId)) {
+      ClientFileEditorManager.assignClientId(editor, myClientId);
+    }
     if (myTabbedPaneWrapper == null) {
       myTabbedPaneWrapper = createTabbedPaneWrapper(myComponent);
       myComponent.setComponent(myTabbedPaneWrapper.getComponent());
@@ -647,13 +654,13 @@ public class EditorComposite extends UserDataHolderBase implements Disposable {
     final int selectedProviderIndex = ArrayUtil.find(editors, getSelectedEditor());
     LOG.assertTrue(selectedProviderIndex != -1);
     final FileEditorProvider[] providers = getProviders();
-    return HistoryEntry.createLight(getFile(), providers, states, providers[selectedProviderIndex]);
+    return HistoryEntry.createLight(getFile(), providers, states, providers[selectedProviderIndex], myPreview);
   }
 
   /**
    * A mapper for old API with arrays and pairs
    */
-  public static @NotNull Pair<FileEditor @NotNull [], FileEditorProvider @NotNull []> retrofit(@Nullable EditorComposite composite) {
+  public static @NotNull Pair<FileEditor @NotNull [], FileEditorProvider @NotNull []> retrofit(@Nullable FileEditorComposite composite) {
     if (composite == null) return new Pair<>(FileEditor.EMPTY_ARRAY, FileEditorProvider.EMPTY_ARRAY);
 
     FileEditor[] editors = composite.getAllEditors().toArray(FileEditor.EMPTY_ARRAY);
