@@ -80,7 +80,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
    * @deprecated Workaround fpr CWM-3308, in general, the runtime instance is internal and should not be exposed
    */
   @ApiStatus.Internal
-  @Deprecated(forRemoval = true)
+  @Deprecated
   @Nullable
   public ServerRuntimeInstance<D> getServerRuntimeInstance() {
     return myRuntimeInstance;
@@ -244,7 +244,7 @@ public class ServerConnectionImpl<D extends DeploymentConfiguration> implements 
       .map(nextForProject -> nextForProject.findManager(deployment))
       .filter(Objects::nonNull)
       .map(DeploymentLogManagerImpl::getMainLoggingHandler)
-      .collect(Collectors.toList());
+      .toList();
 
     final Consumer<String> logConsumer = message -> {
       if (handlers.isEmpty()) {
